--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "jsonwebtoken": "8.5.1",
     "jwks-rsa": "3.0.0",
     "lodash": "4.17.21",
+    "monaco-editor": "0.34.1",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
+    "rand-seed": "1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.40.0",
@@ -83,8 +85,8 @@
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.43.0",
-    "@typescript-eslint/parser": "5.43.0",
+    "@typescript-eslint/eslint-plugin": "5.47.1",
+    "@typescript-eslint/parser": "5.47.1",
     "@vitejs/plugin-react": "2.2.0",
     "concurrently": "7.6.0",
     "cross-env": "7.0.3",
@@ -93,11 +95,12 @@
     "cypress-dotenv-flow": "1.2.2",
     "dotenv-flow": "3.2.0",
     "dotenv-flow-cli": "1.0.0",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "eslint": "8.30.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-mui-path-imports": "0.0.3",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "29.3.1",
     "prettier": "2.7.1",
