--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
     "@hookform/resolvers": "2.9.10",
-    "@inlet/react-pixi": "^6.8.0",
     "@monaco-editor/react": "4.4.6",
     "@mui/icons-material": "5.10.14",
     "@mui/lab": "5.0.0-alpha.111",
@@ -43,6 +42,7 @@
     "@vercel/analytics": "0.1.5",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
+    "excalibur": "^0.27.0",
     "express": "4.18.2",
     "history": "4.10.1",
     "immer": "9.0.16",
@@ -52,7 +52,6 @@
     "monaco-editor": "0.34.1",
     "morgan": "1.10.0",
     "path-to-regexp": "6.2.1",
-    "pixi.js": "^7.1.0",
     "rand-seed": "1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
