--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@vercel/analytics": "0.1.5",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
-    "excalibur": "^0.27.0",
+    "excalibur": "0.27.0",
     "express": "4.18.2",
     "history": "4.10.1",
     "immer": "9.0.16",
@@ -56,7 +56,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.40.0",
-    "react-inspector": "^6.0.1",
+    "react-inspector": "6.0.1",
     "react-mosaic-component": "5.3.0",
     "react-redux": "8.0.5",
     "react-router": "5.3.3",
