--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,15 @@
     "prettier"
   ],
   "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "src/*/tsconfig.json"
+      }
+    },
     "react": {
       "version": "detect"
     }
