--- a/package.json
+++ b/package.json
@@ -87,8 +87,8 @@
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "@vitejs/plugin-react": "2.2.0",
     "concurrently": "7.6.0",
     "cross-env": "7.0.3",
@@ -97,11 +97,12 @@
     "cypress-dotenv-flow": "1.2.2",
     "dotenv-flow": "3.2.0",
     "dotenv-flow-cli": "1.0.0",
-    "eslint": "8.30.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-mui-path-imports": "0.0.3",
-    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "29.3.1",
