--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   "devDependencies": {
     "@swc-node/jest": "1.5.6",
     "@swc/core": "1.3.18",
+    "@swc/helpers": "0.4.14",
     "@testing-library/cypress": "8.0.7",
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.12",
