--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vercel/analytics": "0.1.5",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
+    "excalibur": "0.27.0",
     "express": "4.18.2",
     "history": "4.10.1",
     "immer": "9.0.16",
@@ -55,7 +56,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.40.0",
-    "react-inspector": "^6.0.1",
+    "react-inspector": "6.0.1",
     "react-mosaic-component": "5.3.0",
     "react-redux": "8.0.5",
     "react-router": "5.3.3",
@@ -71,8 +72,9 @@
     "zustand": "4.1.4"
   },
   "devDependencies": {
-    "@swc-node/jest": "1.5.5",
+    "@swc-node/jest": "1.5.6",
     "@swc/core": "1.3.18",
+    "@swc/helpers": "0.4.14",
     "@testing-library/cypress": "8.0.7",
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.12",
@@ -86,8 +88,8 @@
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.47.1",
-    "@typescript-eslint/parser": "5.47.1",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "@vitejs/plugin-react": "2.2.0",
     "concurrently": "7.6.0",
     "cross-env": "7.0.3",
@@ -96,11 +98,12 @@
     "cypress-dotenv-flow": "1.2.2",
     "dotenv-flow": "3.2.0",
     "dotenv-flow-cli": "1.0.0",
-    "eslint": "8.30.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint": "8.32.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-mui-path-imports": "0.0.3",
-    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react": "7.32.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "29.3.1",
