--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-typesafe-routes": "0.0.8",
     "redux": "4.2.0",
     "redux-undo": "1.0.1",
+    "slugify": "1.6.5",
     "superjson": "1.11.0",
     "use-debounce": "8.0.4",
     "uuid": "9.0.0",
