--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     "seed": "yarn db:seed"
   },
   "dependencies": {
-    "@babel/preset-typescript": "7.18.6",
-    "@babel/standalone": "7.20.15",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@fontsource/roboto": "4.5.8",
@@ -60,7 +58,7 @@
     "lodash": "4.17.21",
     "monaco-editor": "0.34.1",
     "morgan": "1.10.0",
-    "neverthrow": "^6.0.0",
+    "neverthrow": "6.0.0",
     "path-to-regexp": "6.2.1",
     "rand-seed": "1.0.2",
     "react": "18.2.0",
@@ -88,7 +86,6 @@
     "@swc/core": "1.3.18",
     "@swc/helpers": "0.4.14",
     "@testing-library/cypress": "8.0.7",
-    "@types/babel__standalone": "^7.1.4",
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.12",
     "@types/dotenv-flow": "3.2.0",
