--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "morgan": "1.10.0",
     "neverthrow": "6.0.0",
     "path-to-regexp": "6.2.1",
-    "proxy-deep": "^3.1.1",
-    "quickjs-emscripten": "^0.21.1",
+    "proxy-deep": "3.1.1",
+    "quickjs-emscripten": "0.21.1",
     "rand-seed": "1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -84,8 +84,8 @@
     "zustand": "4.1.4"
   },
   "devDependencies": {
-    "@swc-node/jest": "1.5.6",
-    "@swc/core": "1.3.18",
+    "@swc-node/jest": "1.6.1",
+    "@swc/core": "1.3.35",
     "@swc/helpers": "0.4.14",
     "@testing-library/cypress": "8.0.7",
     "@types/bcrypt": "5.0.0",
