--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@trpc/server": "10.1.0",
     "@vercel/analytics": "0.1.5",
     "bcrypt": "5.1.0",
+    "classnames": "2.3.2",
     "cors": "2.8.5",
     "excalibur": "0.27.0",
     "express": "4.18.2",
