--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@trpc/server": "10.1.0",
     "@vercel/analytics": "0.1.5",
     "bcrypt": "5.1.0",
+    "classnames": "2.3.2",
     "cors": "2.8.5",
     "excalibur": "0.27.0",
     "express": "4.18.2",
@@ -57,7 +58,10 @@
     "lodash": "4.17.21",
     "monaco-editor": "0.34.1",
     "morgan": "1.10.0",
+    "neverthrow": "6.0.0",
     "path-to-regexp": "6.2.1",
+    "proxy-deep": "3.1.1",
+    "quickjs-emscripten": "0.21.1",
     "rand-seed": "1.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -72,7 +76,6 @@
     "redux-undo": "1.0.1",
     "slugify": "1.6.5",
     "superjson": "1.11.0",
-    "uniqolor": "1.1.0",
     "use-debounce": "8.0.4",
     "uuid": "9.0.0",
     "web-vitals": "3.1.0",
@@ -80,8 +83,8 @@
     "zustand": "4.1.4"
   },
   "devDependencies": {
-    "@swc-node/jest": "1.5.6",
-    "@swc/core": "1.3.18",
+    "@swc-node/jest": "1.6.1",
+    "@swc/core": "1.3.35",
     "@swc/helpers": "0.4.14",
     "@testing-library/cypress": "8.0.7",
     "@types/bcrypt": "5.0.0",
@@ -115,7 +118,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "jest": "29.3.1",
-    "prettier": "2.7.1",
+    "prettier": "2.8.4",
     "prettier-plugin-prisma": "4.4.0",
     "prisma": "4.6.1",
     "start-server-and-test": "1.14.0",
